# the_evolution_of_todo

./: .gitignore  CLAUDE.md  DEPLOYMENT_FIX.md  GEMINI.md  MOBILE_NOTIFICATION_FIX.md  output.md  run_tests.sh  test_session_model.py  test_todo_model.py  test_user_model.py  test_user_specification.py
.claude/agents/: architect-agent.md  cluster-sre.md  code-builder.md  context-explorer.md  devops-specialist.md  event-flow-engineer.md  qa-verifier.md  security-auditor.md  state-architect.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
.specify/memory/: constitution.md
backend/: .gitignore  models.py  requirements.txt
history/adr/: 0001-stateless-ai-chatbot-architecture-with-mcp-integration.md  0002-backend-technology-stack-for-ai-chatbot.md  001-flowbite-gsap-integration-strategy.md
phase-1/: README.md
phase-2/: README.md
phase-2/backend/: .env.example  DEPLOYMENT.md  QUICKSTART.md  README.md  config.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py  test_prod_api.py
phase-2/frontend/: MOBILE_TESTING.md  README.md  package-lock.json  package.json  (+1 more)
phase-3/: ACTION_DETECTION_PATTERNS.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  README.md  verify_deployment.sh
phase1/: pyproject.toml  tasks.json
phase1/src/cli/: commands.py
phase1/src/services/: task_service.py
phase1/tests/integration/cli/: test_commands.py
phase1/tests/unit/repositories/: test_in_memory_task_repository.py
phase2/: .gitignore  .npmignore  ENVIRONMENT_SETUP.md  SETUP_INSTRUCTIONS.md  docker-compose.prod.yml  docker-compose.yml  init.sql  setup.sh
(+325 files in other folders)
